# atlas

./: .gitignore  Cargo.toml  PRD.md  rust-toolchain.toml
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: main.rs
crates/atlas-cli/src/commands/: build.rs  inspect.rs  mod.rs  new.rs  validate.rs
crates/atlas-runtime/: Cargo.toml
crates/atlas-runtime/src/: engine.rs  error.rs  host_funcs.rs  instance.rs  integrity.rs  invocation.rs  lib.rs  memory.rs  network.rs  policy.rs
crates/atlas-runtime/tests/: asura_integration.rs  integration.rs
crates/atlas-sdk/: Cargo.toml
crates/atlas-sdk/src/: lib.rs  macros.rs  source.rs
crates/atlas-sdk/src/abi/: alloc.rs  codec.rs  mod.rs
crates/atlas-sdk/src/host/: http.rs  imports.rs  log.rs  mod.rs
crates/atlas-spec/: Cargo.toml
crates/atlas-spec/src/: capability.rs  error.rs  lib.rs  manifest.rs  network.rs  preferences.rs
crates/atlas-spec/src/types/: chapter.rs  manga.rs  mod.rs  page.rs  search.rs  source_info.rs
ios/: .swiftlint.yml  Project.swift
ios/Atlas.xcodeproj/: project.pbxproj
ios/Atlas.xcodeproj/xcshareddata/: IDETemplateMacros.plist
ios/Atlas.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Core.xcscheme  Diagnostics.xcscheme  Downloads.xcscheme  Library.xcscheme  Networking.xcscheme  Persistence.xcscheme  Reader.xcscheme  Settings.xcscheme  SourceRegistry.xcscheme  SourceRuntime.xcscheme  Sources.xcscheme
ios/Atlas.xcodeproj/xcuserdata/grigorij.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Atlas.xcworkspace/: contents.xcworkspacedata
ios/Atlas.xcworkspace/xcshareddata/xcschemes/: Atlas-Workspace.xcscheme  Generate Project.xcscheme
ios/Atlas.xcworkspace/xcuserdata/grigorij.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Modules/App/Resources/BundledSources/: example_manifest.json
ios/Modules/App/Sources/: AtlasApp.swift
ios/Modules/Core/Sources/Models/: Chapter.swift  Manga.swift  Page.swift  PreferenceSchema.swift  SearchModels.swift  SourceInfo.swift  SourceManifest.swift
ios/Modules/Diagnostics/Sources/: LogStore.swift
ios/Modules/Downloads/Sources/: DownloadsView.swift
ios/Modules/Networking/Sources/: NetworkClient.swift
ios/Modules/Persistence/Sources/: SourceStorage.swift
ios/Modules/Persistence/Tests/: PersistenceTests.swift
ios/Modules/Reader/Sources/: MangaDetailView.swift  ReaderView.swift
ios/Modules/Settings/Sources/: SettingsView.swift
ios/Modules/SourceRegistry/Sources/: RegistryClient.swift  RegistryIndex.swift
ios/Modules/SourceRuntime/Sources/: AtlasRuntime.swift  CapabilityPolicy.swift  HostFunctions.swift  MessagePackBridge.swift  SourceInstance.swift
ios/Modules/Sources/Sources/: SourceBrowseView.swift  SourceManager.swift  SourceStorageAdapter.swift  SourcesView.swift
ios/Tuist/: Package.resolved  Package.swift
registry/: index.json
registry/sources/asura-scans/: manifest.json
registry/sources/asura-scans/0.1.0/: asura_scans.wasm
registry/sources/example-source/: changelog.json
registry/sources/example-source/0.1.0/: example_source.wasm
sources/asura-scans/: Cargo.toml
sources/asura-scans/src/: lib.rs  parser.rs
sources/example-source/: Cargo.toml
sources/example-source/src/: lib.rs
