[workspace]
resolver = "2"
members = [
    "crates/atlas-spec",
    "crates/atlas-sdk",
    "crates/atlas-runtime",
    "crates/atlas-cli",
    "sources/example-source",
    "sources/asura-scans",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/atlas-platform/atlas"
authors     = ["Atlas Contributors"]

[workspace.dependencies]
# Internal crates
atlas-spec    = { path = "crates/atlas-spec" }
atlas-sdk     = { path = "crates/atlas-sdk" }
atlas-runtime = { path = "crates/atlas-runtime" }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# CLI
clap = { version = "4", features = ["derive", "color"] }

# Crypto
sha2 = "0.10"

# WASM runtime (pure Rust interpreter — no JIT, iOS-safe)
wasmi = "0.38"

# HTML parsing (for source modules compiled to WASM)
scraper = "0.22"

# HTTP (for CLI/desktop testing only — not in SDK or WASM modules)
ureq = { version = "2", features = ["json"] }
