[package]
name        = "atlas-sdk"
description = "Atlas source platform — SDK for authoring WASM source modules"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

# `cdylib` produces the .wasm binary when targeting wasm32-unknown-unknown.
# `rlib` allows native test builds to link against the SDK.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atlas-spec = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
rmp-serde  = { workspace = true }
thiserror  = { workspace = true }
