[package]
name        = "asura-scans"
version     = "0.1.0"
edition     = "2021"
publish     = false

[lib]
crate-type = ["cdylib"]

[dependencies]
atlas-spec = { workspace = true }
atlas-sdk  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
scraper    = { workspace = true }
